add email listener + security acces for offer entity

--- a/api/.env
+++ b/api/.env
@@ -48,3 +48,10 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=cb6fd666fc23277c29687b9041309050
 ###< lexik/jwt-authentication-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=gmail://recruitapprh:PirateKing666@localhost
+###< symfony/swiftmailer-bundle ###
