Add Behat files / fixtures
Signed-off-by: walidmh <walid_mohsin10@hotmail.com>

--- a/api/.env
+++ b/api/.env
@@ -21,7 +21,7 @@ VARNISH_URL=http://cache-proxy
 APP_ENV=dev
 APP_SECRET=!ChangeMe!
 TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
-TRUSTED_HOSTS='^192.168.99.100$'
+TRUSTED_HOSTS='^localhost|api$'
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -55,3 +55,5 @@ JWT_PASSPHRASE=cb6fd666fc23277c29687b9041309050
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=gmail://recruitapprh:PirateKing666@localhost
 ###< symfony/swiftmailer-bundle ###
+
+COMPOSE_HTTP_TIMEOUT=600
