--- a/api/config/services.yaml
+++ b/api/config/services.yaml
@@ -27,6 +27,15 @@ services:
         decorates: 'api_platform.swagger.normalizer.documentation'
         arguments: ['@App\Swagger\SwaggerDecorator.inner']
         autoconfigure: false
+        
+    App\DataFixtures\Faker\Provider\FooProvider:
+        tags: [ { name: nelmio_alice.faker.provider } ]
+
+    App\DataFixtures\Faker\Provider\PasswordProvider:
+        tags: [ { name: nelmio_alice.faker.provider } ]
+
+    App\DataFixtures\Faker\Provider\ContratTypeProvider:
+        tags: [ { name: nelmio_alice.faker.provider } ]
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
