--- a/api/fixtures/status.yml
+++ b/api/fixtures/status.yml
@@ -3,5 +3,4 @@
 
 App\Entity\Status:
     status_{1..20}:
-        name: <randomElements("initiée", "En cours", "finie")>
-        applicantions: '<numberBetween(1, 20)>x @application_*'
+        name: <RandStatus()>
